--- a/runsubmission.html
+++ b/runsubmission.html
@@ -2,10 +2,38 @@
 <html>
 <head>
 <title>Kaizo Ironmon Run Submission</title>
-<style>
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" name="runnername">
-    <select id="game-dropdown" name="game"></select>
+    <label for="e4-radio">Runner Name:</label><input id="runnername-text" type="text" name="runnername"> <br>
+    <label for="e4-radio">Game Name:</label><select id="game-dropdown" name="game"></select> <br>
+    <legend>Did the run reach the Elite 4 (or Equivalent)?</legend>
+    <input id="e4-radio" type="radio" name="e4" value="Yes"><label for="e4-radio">Yes</label> <br>
+    <legend>Was the run streamed?</legend>
+    <input id="streamed-radio-yes" type="radio" name="streamed" value="Yes"><label for="streamed-radio-yes">Yes</label>
+    <input id="streamed-radio-no" type="radio" name="streamed" value="No"><label for="streamed-radio-no">No</label><br>
+    <div id="pokemoninfo">
+        <fieldset>
+            <legend>
+                Pokemon info
+            </legend>
+            <label for="e4level-number">Level When Entering Elite 4 or Equivalent: </label><input id="e4level-number" name="e4level" type="number" size="4" min="1" max="100"> <br />
+            <select id="pokemon-dropdown" name="pokemon"></select> <br />
+            <select id="ability-dropdown" name="ability"></select> <br />
+            <select id="move-dropdown1" name="move"></select> <br />
+            <select id="move-dropdown2" name="move"></select> <br />
+            <select id="move-dropdown3" name="move"></select> <br />
+            <select id="move-dropdown4" name="move"></select> <br />
+            <select id="nature-dropdown" name="nature"></select> <br />
+            <label for="e4level-number">HP: </label><input id="hp-number" name="hp" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Attack: </label><input id="atk-number" name="atk" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Defense: </label><input id="def-number" name="def" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Special Attack: </label><input id="spatk-number" name="spatk" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Special Defense: </label><input id="spdef-number" name="spdef" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Speed: </label><input id="e4level-number" name="speed" type="number" min="1" max="700" size="4"> <br />
+            <label for="e4level-number">Level When Stats Were Recorded: </label><input id="statslevel-number" name="statslevel" type="number" min="1" max="100" size="4"> <br />
+        </fieldset>
+    </div>
 </body>
+<script src="populate.js"></script>
+</html>
