--- a/runsubmission.html
+++ b/runsubmission.html
@@ -33,6 +33,7 @@
             <label for="e4level-number">Speed: </label><input id="e4level-number" name="speed" type="number" min="1" max="700" size="4"> <br />
             <label for="e4level-number">Level When Stats Were Recorded: </label><input id="statslevel-number" name="statslevel" type="number" min="1" max="100" size="4"> <br />
         </fieldset>
+    <input type="submit" value="Submit Run">
     </div>
 </body>
 <script src="populate.js"></script>
