--- a/runsubmission.html
+++ b/runsubmission.html
@@ -5,14 +5,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Kaizo E4 Run Submission</h1>
     <form>
     <div id="runinfo">
         <p>
-            <label for="e4-radio">Runner Name:</label><input id="runnername-text" type="text" name="runnername">
-            <label for="e4-radio">Game Name:</label><select id="game-dropdown" name="game"></select> <br>
+            <label for="e4-radio">Runner Name: </label>
+            <input id="runnername-text" type="text" name="runnername">
+            <br />
+            <label for="e4-radio">Game Name: </label>
+            <select id="game-dropdown" name="game"></select>
+            <br />
         </p>
         <p>
-            <legend>Did the run reach the Elite 4 (or Equivalent)?</legend>
+            <legend>Did the run reach the Elite 4 (or equivalent)?</legend>
         </p>
         <p>
             <input id="e4-radio" type="radio" name="e4" value="Yes"><label for="e4-radio">Yes</label> <br>
@@ -28,10 +33,10 @@
     <div id="pokemoninfo">
         <fieldset>
             <legend>
-                Pokemon Level, Ability, Nature, and Moves at Elite 4
+                Pokemon level, ability, nature, and moves at Elite 4
             </legend>
             <p>
-            <label for="e4level-number">Level When Entering Elite 4 or Equivalent: </label><br /><input id="e4level-number" name="e4level" type="number" size="4" min="1" max="100"> <br />
+            <label for="e4level-number">Level when entering Elite 4 or equivalent: </label><br /><input id="e4level-number" name="e4level" type="number" size="4" min="1" max="100"> <br />
             </p>
             <select id="pokemon-dropdown" name="pokemon"></select> <br />
             <select id="ability-dropdown" name="ability"></select> <br />
@@ -47,13 +52,13 @@
             <legend>
                 Pokemon Stats
             </legend>
-            <label for="e4level-number">HP: </label> <br /><input id="hp-number" name="hp" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Attack: </label> <br /><input id="atk-number" name="atk" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Defense: </label> <br /><input id="def-number" name="def" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Special Attack: </label> <br /><input id="spatk-number" name="spatk" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Special Defense: </label> <br /><input id="spdef-number" name="spdef" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Speed: </label> <br /><input id="e4level-number" name="speed" type="number" min="1" max="700" size="4"> <br />
-            <label for="e4level-number">Level When Stats Were Recorded: </label> <br /><input id="statslevel-number" name="statslevel" type="number" min="1" max="100" size="4"> <br />
+            <label for="hp">HP: </label> <br /><input id="hp-number" name="hp" type="number" min="1" max="700" size="4"> <br />
+            <label for="atk">Attack: </label> <br /><input id="atk-number" name="atk" type="number" min="1" max="700" size="4"> <br />
+            <label for="def">Defense: </label> <br /><input id="def-number" name="def" type="number" min="1" max="700" size="4"> <br />
+            <label for="spatk">Special Attack: </label> <br /><input id="spatk-number" name="spatk" type="number" min="1" max="700" size="4"> <br />
+            <label for="spdef">Special Defense: </label> <br /><input id="spdef-number" name="spdef" type="number" min="1" max="700" size="4"> <br />
+            <label for="speed">Speed: </label> <br /><input id="e4level-number" name="speed" type="number" min="1" max="700" size="4"> <br />
+            <label for="statslevel">Level when stats were recorded: </label> <br /><input id="statslevel-number" name="statslevel" type="number" min="1" max="100" size="4"> <br />
         </fieldset>
     </form>
     <input type="submit" value="Submit Run">
